# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
DrfAuth/: asgi.py  settings.py  urls.py  wsgi.py
post/: models.py  permissions.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
